# src/resources/specimen.py
@@ -1,5 +1,6 @@
 import datetime
 from flask_restful import Resource, reqparse
+from flask import make_response
 from models.age import AgeModel
 from models.animalType import AnimalTypeModel
 from models.destination import DestinationModel
@@ -8,7 +9,7 @@ from models.species import SpeciesModel
 
 from models.specimen import SpecimenModel
 from models.person import PersonModel
-from helpers.format import returnFormat, folioFormat
+from helpers.format import returnFormat, folioFormat, toCsv
 
 
 class Specimen(Resource):
@@ -182,3 +183,43 @@ class SpecimenList(Resource):
         specimen_list = SpecimenModel.find_by_attributes(**data)
 
         return returnFormat(message='Specimen list retrieved succesfully', data=[specimen.json() for specimen in specimen_list])
+
+class SpecimenCSV(Resource):
+
+    get_parser = reqparse.RequestParser()
+    get_parser.add_argument('limit', type=int, required=False,
+                            help='Limit of specimen to retrive', location='args')
+    get_parser.add_argument('offset', type=int, required=False,
+                            help='Offset of specimen to retrive', location='args')
+    get_parser.add_argument('person_id', type=int, required=False,
+                            help='person_id is an required param', location='args')
+    get_parser.add_argument('animalType_id', type=int, required=False,
+                            help='animalType_id is an required param', location='args')
+    get_parser.add_argument('species_id', type=int, required=False,
+                            help='species_id is an required param', location='args')
+    get_parser.add_argument('age_id', type=int, required=False,
+                            help='age_id is an required param', location='args')
+    get_parser.add_argument('folio', type=str, required=False,
+                            help='folio is an required param', location='args')
+    get_parser.add_argument('gender_id', type=int, required=False,
+                            help='gender_id is an required param', location='args')
+    get_parser.add_argument('destination_id', type=int, required=False,
+                            help='destination_id is an required param', location='args')
+    get_parser.add_argument('neighborhood_id', type=int, required=False,
+                            help='neighborhood_id is an required param', location='args')
+    get_parser.add_argument('date_from', type=lambda x: datetime.datetime.strptime(x, '%d-%m-%y'), required=False,
+                             help='date is required (dd-mm-yy)', location='args')
+    get_parser.add_argument('date_to', type=lambda x: datetime.datetime.strptime(x, '%d-%m-%y'), required=False,
+                             help='date is required (dd-mm-yy)', location='args')
+
+    def get(self):
+
+        data = SpecimenList.get_parser.parse_args()
+        specimen_list = SpecimenModel.find_by_attributes(**data)
+        labels = SpecimenModel.getCsvLabels()
+        rows = [specimen.csv() for specimen in specimen_list]
+        response = make_response(toCsv(labels, rows))
+        response.headers['Content-Type'] = 'text/csv'
+        response.headers['Content-Disposition'] = 'attachment; filename=scpecimens.csv'
+
+        return response
