# src/resources/tracking.py
@@ -1,9 +1,10 @@
 from flask_restful import Resource, reqparse
+from flask import make_response
 from models.destination import DestinationModel
 
 from models.tracking import TrackingModel
 from models.destination import DestinationModel
-from helpers.format import returnFormat
+from helpers.format import returnFormat, toCsv
 from models.specimen import SpecimenModel
 
 from datetime import datetime
@@ -143,6 +144,47 @@ class TrackingList(Resource):
 
         data = TrackingList.get_parser.parse_args()
         tracking_list = TrackingModel.find_by_attributes(**data)
-        print(data)
 
         return returnFormat(message='Tracking list retrieved succesfully', data=[tracking.json() for tracking in tracking_list])
+
+class TrackingCSV(Resource):
+
+    get_parser = reqparse.RequestParser()
+    get_parser.add_argument('limit', type=int, required=False,
+                            help='Limit of tracking to retrive', location='args')
+    get_parser.add_argument('offset', type=int, required=False,
+                            help='Offset of tracking to retrive', location='args')
+    get_parser.add_argument('person_id', type=int, required=False,
+                            help='person_id is an required param', location='args')
+    get_parser.add_argument('animalType_id', type=int, required=False,
+                            help='animalType_id is an required param', location='args')
+    get_parser.add_argument('species_id', type=int, required=False,
+                            help='species_id is an required param', location='args')
+    get_parser.add_argument('age_id', type=int, required=False,
+                            help='age_id is an required param', location='args')
+    get_parser.add_argument('folio', type=str, required=False,
+                            help='folio is an required param', location='args')
+    get_parser.add_argument('gender_id', type=int, required=False,
+                            help='gender_id is an required param', location='args')
+    get_parser.add_argument('destination_id', type=int, required=False,
+                            help='destination_id is an required param', location='args')
+    get_parser.add_argument('specimen_id', type=int, required=False,
+                            help='specimen_id is an required param', location='args')
+    get_parser.add_argument('reviewed', type=bool, required=False,
+                            help='reviewed is a bool param', location='args')
+    get_parser.add_argument('date_from', type=lambda x: datetime.strptime(x, '%d-%m-%y'), required=False,
+                             help='date is required (dd-mm-yy)', location='args')
+    get_parser.add_argument('date_to', type=lambda x: datetime.strptime(x, '%d-%m-%y'), required=False,
+                             help='date is required (dd-mm-yy)', location='args')
+
+    def get(self):
+
+        data = TrackingList.get_parser.parse_args()
+        tracking_list = TrackingModel.find_by_attributes(**data)
+        labels = TrackingModel.getCsvLabels()
+        rows = [tracking.csv() for tracking in tracking_list]
+        response = make_response(toCsv(labels, rows))
+        response.headers['Content-Type'] = 'text/csv'
+        response.headers['Content-Disposition'] = 'attachment; filename=scpecimens.csv'
+
+        return response
